# Ortho4XP

./: .dockerignore  .gitignore  Carnet_d_adresses.py  Dockerfile  INSTALL.md  Install_Instructions.txt  LICENSE.3rd_party  Macintosh Installations  Ortho4XP.cfg  Ortho4XP.py  Ortho4XP.spec  Ortho4XP_App.desktop  Ortho4XP_devel.py  Ortho4XP_fixvbguest.desktop  Ortho4XP_provision_script.sh  Ortho4XP_starter.sh  Ortho4XP_v120b.py  Ortho4XP_v130.py  Ortho4XP_vboxguestadditions.sh  README.install_NOT_UP_TO_DATE  README.md  Triangle4XP.c  Vagrantfile  Windows10_Ortho4XP.bat  Windows_Setup.bat  analyze_imagery.py  community_server.txt  docker-compose.yml  docker-compose.yml-sample  dockerBuild.sh  dockerRun.sh  fast_image_mask.pyd  install_mac.sh  install_windows.bat  mask_region.py  merge_dtms.py  provision_script.sh  pyproject.toml  reduce_imagery.py  requirements-win64-py36.txt  (+8 more)
Utils/: CMakeLists.txt  DSFTool.app  DSFremovepol.py  Mosaic.py  Ortho4WED.py  Triangle4XP  Triangle4XP.app  Triangle4XP.c  Triangle4XP_v130  Triangle4XP_v130.app  blurX.scm  create_dtm.py  medit  medit-2.3-linux  medit-osx10.4.tgz  moulinette_app  objutils_combined.py  reduce_imagery.py  showme  showme.app  triangle  triangle.app
Utils/lin/: DSFTool  Triangle4XP  medit-2.3-linux  moulinette  nvcompress  triangle
Utils/mac/: DDSTool  DSFTool  Triangle4XP  nvcompress  triangle
Utils/nvcompress/: nvcompress-mac-cuda.app  nvcompress-mac-nocuda.app
Utils/run/: build.py  configure.py  install.py
Utils/src/: Triangle4XP.c  Triangle4XP_v130.c  triangle.c
Utils/toolchains/: mingw-on-linux.cmake  (+1 more)
(+402 files in other folders)
